# rag_reviews

./: .dockerignore  .gitignore  API_README.md  QUICKSTART.md  README.md  SYSTEM_DESIGN.md  pyproject.toml  pytest.ini
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  rag_builder.py  rag_query.py
app/ui/: __init__.py  gradio_interface.py
app/utils/: __init__.py  logging_config.py  metrics.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_routes.py
tests/unit/: test_metrics.py  test_schemas.py
